solution of 3 tasks is ready

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-        <h1>yo</h1>
+        <h1>Yo, three tasks solution in a console</h1>
     </div>
 </body>
 </html>
